# stewart_platform_pkg

./: CMakeLists.txt  CMakeLists.txt.autosave  README.md  package.xml  stewart_platform_pkg.pro
include/stewart_platform_pkg/: hmi_node1.h  qt_executor.cpp  qt_executor.h
launch/: stewart.launch.py
scripts/: kinematics_node.py
src/: HomeForm.ui.qml  OscillatorForm.ui.qml  actuator_node.cpp  canbus.cpp  hmi_node1.cpp  main.cpp  main.qml  qml.qrc
stewart_platform_pkg/: inverse_kinematics.py
